# terracotta

./: .gitignore  .gitreview  .testr.conf  README.md  compute-data-collector-status.py  neat.conf  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini  vm-placement.py
doc/source/: conf.py  index.rst
etc/: neat.conf.sample  terracotta-config-generator.conf  terracotta.conf.sample
etc/oslo-config-generator/: terracotta.conf
etc/terracotta/: README-terracotta.conf.txt  terracotta-config-generator.conf
neat/: config.py
neat/globals/: db_cleaner.py  manager.py
neat/locals/: collector.py
terracotta/: __init__.py  common.py  config.py  context.py  contracts_extra.py  db_temp.py  i18n.py  rpc.py  version.py
terracotta/api/: access_control.py  app.py  wsgi.py
terracotta/cmd/: api.py  collector.py  global_manager.py  launch.py  local_manager.py
terracotta/db/: __init__.py  api.py
terracotta/globals/: db_cleaner.py  manager.py
terracotta/locals/: collector.py  manager.py
terracotta/tests/: base.py
terracotta/utils/: __init__.py  db_utils.py  idle-time-fraction.py  overload-time-fraction.py  vm-migrations.py
tests/: test_config.py
tests/globals/: test_db_cleaner.py  test_manager.py
tests/locals/: test_collector.py  test_manager.py
tools/: compute-clone-neat.py  compute-copy-conf.py  compute-data-collector-start.py  compute-data-collector-stop.py  compute-install-deps.py  compute-install-neat.py  compute-local-manager-start.py  compute-local-manager-status.py  compute-local-manager-stop.py  compute-sync-time.py
(+27 files in other folders)
