[metadata]
name = terracotta
summary = Dynamic Scheduling service for OpenStack Cloud
description-file =
    README.md
license = Apache License, Version 2.0
home-page = https://launchpad.net/terracotta
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    #License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = Openstack Terracotta Team
author-email = openstack-dev@lists.openstack.org

[files]
packages =
    terracotta

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[entry_points]
console_scripts =
    terracotta-server = terracotta.cmd.launch:main
    terracotta-api = terracotta.cmd.api:main
    terracotta-global-manager = terracotta.cmd.global_manager:main
    terracotta-local-manager = terracotta.cmd.local_manager:main
    terracotta-collector = terracotta.cmd.collector:main
